# CloudyBack/Kjkardum.CloudyBack.Application/UseCases/BaseResource/Commands/ConfigurePublicAccess/ConfigurePublicAccessCommand.cs
@@ -1,0 +1,8 @@
+using MediatR;
+
+namespace Kjkardum.CloudyBack.Application.UseCases.BaseResource.Commands.ConfigurePublicAccess;
+
+public class ConfigurePublicAccessCommand: IRequest
+{
+    public string Host { get; set; }
+}
