# CloudyBack/Kjkardum.CloudyBack.Application/UseCases/BaseResource/Dtos/PublicAccessConfigurationDto.cs
@@ -1,0 +1,7 @@
+namespace Kjkardum.CloudyBack.Application.UseCases.BaseResource.Dtos;
+
+public class PublicAccessConfigurationDto
+{
+    public bool Created { get; set; }
+    public string Host { get; set; } = string.Empty;
+}
