# CloudyBack/Kjkardum.CloudyBack.Application/UseCases/BaseResource/Queries/GetPublicAccessConfiguration/GetPublicAccessConfigurationQuery.cs
@@ -1,0 +1,6 @@
+using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Dtos;
+using MediatR;
+
+namespace Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetPublicAccessConfiguration;
+
+public class GetPublicAccessConfigurationQuery : IRequest<PublicAccessConfigurationDto>;
